# ratatui-kit-contrib

./: .gitignore  Cargo.toml  README.md  cliff.toml
.github/workflows/: cd.yml  ci.yml
crates/ratatui-kit-keymap/: Cargo.toml  README.md
crates/ratatui-kit-keymap/examples/: keymap_demo.rs
crates/ratatui-kit-keymap/src/: lib.rs  use_keymap_handler.rs
crates/ratatui-kit-keymap/src/keymap/: mod.rs  tests.rs  toml_support.rs
crates/ratatui-kit-keymap/tapes/: keymap_demo.tape
crates/ratatui-kit-markdown/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/ratatui-kit-markdown/.github/workflows/: ci.yml
crates/ratatui-kit-markdown/examples/: blockquote.rs  code_block.rs  diff_viewer.rs  divider.rs  markdown.rs  markdown_streaming.rs  markdown_two_phase.rs
crates/ratatui-kit-markdown/src/: blockquote.rs  code_block.rs  divider.rs  lib.rs  theme.rs
crates/ratatui-kit-markdown/src/diff/: compute.rs  mod.rs  render.rs
crates/ratatui-kit-markdown/src/markdown/: mod.rs  parser.rs
crates/ratatui-kit-markdown/tapes/: blockquote.tape  code-block.tape  diff-viewer.tape  divider.tape  markdown-streaming.tape  markdown-two-phase.tape  markdown.tape
crates/ratatui-kit-markdown/tests/: palette_provider.rs
crates/ratatui-kit-themes/: CHANGELOG.md  Cargo.toml  README.md
crates/ratatui-kit-themes/examples/: gallery.rs
crates/ratatui-kit-themes/src/: lib.rs
crates/ratatui-kit-themes/tapes/: gallery.tape
openspec/changes/add-keymap-crate/: proposal.md  tasks.md
openspec/changes/add-keymap-crate/specs/keymap-core/: spec.md
openspec/changes/add-keymap-crate/specs/keymap-hook/: spec.md
openspec/changes/archive/2026-07-18-add-keymap-crate/: design.md  tasks.md
skills/ratatui-kit-contrib/: SKILL.md
skills/ratatui-kit-contrib/evals/: evals.json
skills/ratatui-kit-contrib/references/: markdown.md  themes.md
